compilación de Sass. corrección de errores nombres de variables llamadas desde _home.scss

--- a/scss/general/_home.scss
+++ b/scss/general/_home.scss
@@ -1,6 +1,6 @@
    body {
        font-family: $fuente-primaria;
-       background-color: $bg-global;
+       background-color: $color-fondo-base;
        color: $color-texto;
        margin: 0;
        padding: 0;
