--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
-@import "reset";
-@import "variables";
-@import "mixins";
+@import "general/reset";
+@import "utilidades/variables";
+@import "utilidades/mixins";
 
 // Estilos base/global
 @import "general/home";
