--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import "general/reset";
 @import "utilidades/variables";
 @import "utilidades/mixins";
+@import "general/contacto";
 
 // Estilos base/global
 @import "general/home";
