--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 /* 
    RESET BÁSICO DE ESTILOS! */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap");
 html,
 body,
 div,
@@ -171,8 +172,41 @@ img {
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
 }
 
+.formulario-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1.5rem;
+  text-align: left;
+}
+
+.formulario-grid input,
+.formulario-grid textarea {
+  width: 100%;
+  padding: 0.8rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 1rem;
+}
+
+.formulario-grid button {
+  padding: 0.8rem 2rem;
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+}
+.formulario-grid button:hover {
+  background-color: #2980b9;
+}
+
+/*  FUENTE IMPORTADA */
+/* Estilos globales */
 body {
   font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  text-align: center;
   background-color: #f5f5f5;
   color: #333;
   margin: 0;
@@ -242,6 +276,28 @@ body .carousel-item img {
 }
 .contenido__listas div {
   flex: 1;
+}
+
+a {
+  color: #ffffff;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+
+h1,
+h2,
+h3 {
+  font-weight: 700;
+  text-decoration: underline;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+p {
+  margin-bottom: 1rem;
+  text-align: center;
 }
 
 @media (max-width: 1023px) and (min-width: 768px) {
