--- a/scss/general/_home.scss
+++ b/scss/general/_home.scss
@@ -1,9 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap");
-
-/* 2) Estilos globales */
 body {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;             
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  line-height: 1.6;
   background-color: $color-fondo-base;
   color: $color-texto;
   margin: 0;
@@ -12,14 +10,20 @@ body {
 
   /* Carousel */
   .carousel-item {
-    text-align: center;        
-    
+    text-align: center;
+
     img {
       width: 50%;
       height: auto;
       max-height: 500px;
       object-fit: cover;
     }
+  }
+}
+
+@media (max-width: 767px) {
+  .carousel-item {
+    display: none !important;
   }
 }
 
@@ -43,6 +47,8 @@ body {
     grid-area: banner;
   }
 
+  /* 
+    ===== Contenido principal ===== */
   &__contenido {
     grid-area: contenido;
     display: grid;
@@ -54,7 +60,18 @@ body {
     gap: 1.5rem;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 1rem;          
+    padding: 1rem;
+  }
+
+  @media (max-width: 767px) {
+    &__contenido {
+      grid-template-areas:
+        "principal"
+        "lateral"
+        "articulo"
+        "listas";
+      grid-template-columns: 1fr;
+    }
   }
 
   &__pie {
@@ -64,6 +81,13 @@ body {
     @include flex-center(space-around, center, row);
     padding: 1rem;
     flex-wrap: wrap;
+
+  
+    @media (max-width: 767px) {
+      flex-direction: column;
+      text-align: center;
+      justify-content: center; 
+    }
   }
 }
 
@@ -72,7 +96,6 @@ body {
 .contenido__articulo,
 .contenido__listas div {
   @extend %card-base;
-
   margin-bottom: 1rem;
 }
 
@@ -96,25 +119,38 @@ body {
   }
 }
 
+/* === Estilos de listas === */
+ul {
+  list-style-type: disc;       
+  margin: 1rem 0;
+  padding-left: 1.5rem;        
+}
 
+ol {
+  list-style-type: decimal;
+  margin: 1rem 0;
+  padding-left: 1.5rem;
+}
+
+/* Estilos de enlaces */
 a {
-  color: #3498db;                
+  color: #f7f9fa;
   text-decoration: none;
-  font-weight: 400;              
+  font-weight: 400;
 
   &:hover {
     text-decoration: underline;
   }
 }
 
+/* Títulos */
 h1,
 h2,
 h3 {
-  font-weight: 700;              
-  margin: 1rem 0;               
-  line-height: 1.2;             
+  font-weight: 700;
+  margin: 1rem 0;
+  line-height: 1.2;
   color: $color-texto;
-
 
   &:hover {
     text-decoration: underline;
@@ -122,7 +158,7 @@ h3 {
 }
 
 h1 {
-  font-size: 2rem;               
+  font-size: 2rem;
 }
 
 h2 {
@@ -133,10 +169,8 @@ h3 {
   font-size: 1.25rem;
 }
 
-
+/* Párrafos */
 p {
-  margin: 0.75rem 0;            
+  margin: 0.75rem 0;
   font-size: 1rem;
-  line-height: 1.5;
 }
-
