--- a/scss/general/_home.scss
+++ b/scss/general/_home.scss
@@ -3,10 +3,12 @@ body {
   width: 100%;
   max-width: 100%;
   overflow-x: hidden;
+  height: 100%;
 }
 
 /* BODY */
 body {
+  height: 100%;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 400;
   line-height: 1.6;
@@ -102,20 +104,18 @@ body {
 .pagina__pie {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   background-color: #212529;
   color: #ffffff;
-  padding: 1.5rem;
+  padding: 0.25rem;
   width: 100%;
   text-align: center;
 }
 
 .pagina__pie div {
-  flex: 1;
-  min-width: 25%;
   text-align: center;
-  padding: 0.5rem;
+  padding: 0.75rem;
 }
 
 @media (max-width: 767px) {
