--- a/css/styles.css
+++ b/css/styles.css
@@ -314,6 +314,36 @@ body {
   box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
 }
 
+.contenedor {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+@media (max-width: 1200px) {
+  .contenedor {
+    max-width: 960px;
+  }
+}
+@media (max-width: 992px) {
+  .contenedor {
+    max-width: 720px;
+  }
+}
+@media (max-width: 768px) {
+  .contenedor {
+    max-width: 540px;
+  }
+}
+@media (max-width: 576px) {
+  .contenedor {
+    max-width: 100%;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+}
+
 /* FOOTER */
 .pagina__pie {
   display: flex;
@@ -341,15 +371,14 @@ body {
     text-align: center;
   }
 }
-/* AJUSTES DE FOOTER PARA BLOG.HTML QUE UTILIZA BOOTSTRAP*/
 .pagina__pie_blog a {
-  text-decoration: none !important; /* Elimina cualquier subrayado inicial */
-  color: #ffffff; /* Asegura que el color sea blanco */
-  transition: text-decoration 0.3s ease-in-out; /* Efecto suave */
+  text-decoration: none !important;
+  color: #ffffff;
+  transition: text-decoration 0.3s ease-in-out;
 }
 
 .pagina__pie_blog a:hover {
-  text-decoration: underline !important; /* Agrega el subrayado en hover */
+  text-decoration: underline !important;
 }
 
 /* LISTAS */
