--- a/scss/utilidades/_variables.scss
+++ b/scss/utilidades/_variables.scss
@@ -1,18 +1,23 @@
-// COLORES PRINCIPALES
+//  COLORES PRINCIPALES
 $color-texto: #333;
 $color-blanco: #fff;
 $color-fondo-base: #f5f5f5;
-$color-fondo-lateral: #eef;
-$color-footer: #2c3e50;
+$color-fondo-lateral: #eef; 
+$color-footer: #212529;
 
-// COLORES SECUNDARIOS
+//  COLORES SECUNDARIOS
 $color-primario: #3498db;
 $color-primario-hover: #2980b9;
 $color-borde-input: #ccc;
 
-/* OTRAS VARIABLES */
+//  BREAKPOINTS
+$bp-mobile: 576px;
+$bp-tablet: 768px;
+$bp-desktop: 1024px;
+
+//  BORDES Y SOMBRAS
 $radius-base: 8px;
 $shadow-base: 0px 2px 4px rgba(0, 0, 0, 0.1);
 
-/* TIPOGRAFÍA */
+//  TIPOGRAFÍA
 $fuente-primaria: 'Roboto', sans-serif;
